--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -1,5 +1,4 @@
 .about-section {
-  min-height: 100vh;
   display: flex;
   align-items: center;
   position: relative;
