--- a/src/sections/Contact/Contact.css
+++ b/src/sections/Contact/Contact.css
@@ -1,5 +1,4 @@
 .contact-section {
-  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
