--- a/src/sections/Hero/Hero.css
+++ b/src/sections/Hero/Hero.css
@@ -1,11 +1,12 @@
 .hero-section {
+  position: relative;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   position: relative;
 }
 
 .hero-content {
-  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
 }
